# xiaodaxia-2008.github.io

./: .gitignore  404.html  CNAME  README.md  TODO.md  _config.yml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  package-lock.json  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy_gh_pages.yml
_data/: _authors.yml
_posts/: 2024-11-14-保持人性.md  2024-11-29-使用Cloudflare Tunnel连接ssh服务.md
_tabs/: about.md
about/: index.html
blog/: index.html
blog/2025年3月24日/: index.html
blog/2025年3月25日/: index.html
blog/2025年3月26日/: index.html
blog/2025年3月27日/: index.html
blog/2025年6月10日/: index.html
blog/2025年6月12日/: index.html
blog/2025年6月17日/: index.html
blog/2025年6月20日/: index.html
blog/2025年6月21日/: index.html
blog/2025年6月22日/: index.html
blog/2025年6月2日/: index.html
blog/2025年6月5日/: index.html
blog/2025年6月7日/: index.html
blog/fiberart-中的连接路径计算方法/: index.html
blog/fiberart-导入外部计算的铺层/: index.html
blog/markdown参考/: index.html
blog/my-post-title/: index.html
blog/nohup-command-21--的意思/: index.html
blog/trajectoryart-轨迹规划教程/: index.html
blog/一吻跨年/: index.html
blog/三个华为人的故事/: index.html
blog/个人网盘配置/: index.html
blog/人生天地间忽如远行客/: index.html
blog/人的模子/: index.html
docs/: about.md  index.md  links.md
interesting/: fireworks.html
links/: index.html
notebooks/: index.html
search/: search_index.json
stylesheets/: extra.css
templates/: DailyTemplate.md  PostTemplate.md  Read More.md  UpdateDate.md
tools/: change_date.py
(+309 files in other folders)
